gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 8088
      allowedRoutes:
        namespaces:
          from: All
