gateway-api/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-httproute
spec:
  # Gateway:
  parentRefs:
    - name: contour
  hostnames:
    - localhost
  rules:
    # Service:
    - backendRefs:
        - name: frontend-service
          port: 3000
